--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ DEVICE_SNMP_COMMUNITY=qwerty123
 
 MQTT_BROKER_HOST=localhost
 MQTT_DEVICE_NAME=Shtyl
-MQTT_ROOT_TOPIC =/devices/shtyl
+MQTT_ROOT_TOPIC=/devices/shtyl
 
 POLLING_INTERVAL=10
